# Heteroage-clock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: artifacts.md  cli.md  data_contract.md
src/heteroage_clock/: __init__.py  cli.py  pipeline.py  version.py
src/heteroage_clock/artifacts/: __init__.py  base.py  stage1.py  stage2.py  stage3.py
src/heteroage_clock/core/: __init__.py  age_transform.py  metrics.py  optimization.py  sampling.py  selection.py  splits.py
src/heteroage_clock/data/: __init__.py  assemble.py  io.py  schema.py
src/heteroage_clock/scripts/: run_inference_pipeline.py
src/heteroage_clock/stages/: __init__.py  stage1.py  stage2.py  stage3.py
src/heteroage_clock/utils/: __init__.py  contract.py  hashing.py  logging.py
tests/: test_contract.py  test_import.py  test_splits.py
